# RL-Snake6110-AI

./: .gitignore  README.md  pyproject.toml
assets/levels/: generated_output.json  generated_output.yaml  test_level.json  test_level.yaml
assets/tilesets/: classic.json  classic.yaml
assets/vocabs/: tile_vocab_coarse_v1.yaml  tile_vocab_global_v1.yaml  tile_vocab_global_v2.yaml  tile_vocab_pov_v1.yaml  tile_vocab_pov_v2.yaml
configs/: example.yaml  example_global_small_px_cnn.yaml  example_global_small_tile_vit.yaml  example_pov_12x12_px_cnn.yaml  example_pov_normal_tile_vit.yaml  example_pov_px_cnn.yaml  example_pov_small_px_cnn.yaml  example_pov_small_px_cnn_vit.yaml  example_pov_small_tile_mlp.yaml  example_pov_small_tile_vit.yaml  example_tile_mlp.yaml  example_tile_vit.yaml
core/: custom_callbacks.py
core/custom_cnns/: base_cnn_extractor.py  custom_cnn.py
core/envs/: base_snake_env.py  snake_envs.py
core/policies/: custom_policies.py
core/snake6110/: geometry.py  level.py  snakegame.py  tile_types.py
scripts/: manual_play.py  play.py  print_level.py  print_tileset.py  run_checkpoint.py  run_latest_checkpoint.py  train.py
src/snake_rl/callbacks/: checkpoint.py  eval_checkpoint.py  latest_checkpoint.py  termination_logger.py
src/snake_rl/cli/: eval.py  play.py  run.py  train.py  watch.py
src/snake_rl/config/: frozen.py  io.py  schema.py  snapshot.py
src/snake_rl/envs/: base.py  base_snake_env.py  obs_base.py  pixel_envs.py  pixel_obs.py  registry.py  snake_envs.py  tile_id_env.py  variants.py
src/snake_rl/game/: geometry.py  snakegame.py  (+2 more)
(+58 files in other folders)
