# pyproject.toml

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-rl"
version = "0.1.0"
description = "Snake game with RL experiments"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.23",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.0",
    "pygame>=2.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Only needed for your run.py / visualization helpers (opencv, feature maps, etc.)
viz = [
    "opencv-python>=4.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
snake-play = "snake_rl.cli.play:main"
snake-train = "snake_rl.cli.train:main"
snake-eval = "snake_rl.cli.eval:main"
snake-watch = "snake_rl.cli.watch:main"

